--- a/views/partials/buypartial.hbs
+++ b/views/partials/buypartial.hbs
@@ -60,8 +60,10 @@
 
 
             </div>
-                <div class="col-md-3">
-                    <button class="col-md-9 button1">Save</button>
+                <div class="col-md-8">
+                    <button class="col-md-6 button1">Confirm</button>
+                    &nbsp; &nbsp;
+                    <a class="col-md-5" onclick="showNext();">show next</a>
                     <br/><br/>
                 </div>
         </fieldset>
