--- a/views/buyform.hbs
+++ b/views/buyform.hbs
@@ -46,14 +46,10 @@
             <span style="margin-left:15px">
                 {{> buypartial}}
                 {{!-- THIS part sends complex array of data and uses JS function to render subnmame --}}
-                {{#if for_tables }}
+                {{#if for_buyform }}
                     {{!-- {{showSubname for_tables}} --}}
                     <script>
-                        let for_buyform = '{{for_buyform}}';
-                        for_buyform = for_buyform.replace(/(\r\n\t|\n|\r\t)/gm,"");
-                        for_buyform = for_buyform.replace(/&quot;/g, '"');
-                        console.log("Price1 = "+for_buyform);
-                        let for_buyform2 = JSON.parse(for_buyform);
+                        let for_buyform2 = getBuyJson();
                         
                         /*console.log("Price parsed = "+for_buyform2);
                         let a1 = for_buyform2[1];
@@ -86,24 +82,46 @@
                                     if (entry._id == sel_id) {
                                         
                                         loop_id = subtype-1;
-                                        price = entry.price;
-                                        console.log("entry price - "+price);
 
                                         console.log("WE DID THIIIIIIIS loop_id = "+loop_id);
                                         /*html += "<label>" + escape(entry.subname) + " - " + escape(entry.actionmsg) + "</label><br/><br/>";
                                         if (entry.price != null) html += '<label for="dtp_input2" class="col-md-2 control-label">Price:</label>'
                                         if (entry.price != null) html += '<div class="input-group spinner col-md-10"><p>'+escape(entry.price)+'$ per unit</p></div>';
                                         console.log("html = "+html);*/
-                                        $("#title").html("<label>" + escape(entry.subname) + " - " + escape(entry.actionmsg) + "</label>"); 
-                                        $("#priceperunit").html(price); 
-                                        $("#pricetotal").html(qnty*price);
+
+                                        displayBuyData(entry);
                                         return;
                                     }
                                 //});
                             //}
                         });
 
+                        function getBuyJson(){
+                            let for_buyform = '{{for_buyform}}';
+                            for_buyform = for_buyform.replace(/(\r\n\t|\n|\r\t)/gm,"");
+                            for_buyform = for_buyform.replace(/&quot;/g, '"');
+                            console.log("Price1 = "+for_buyform);
+                            return JSON.parse(for_buyform);
+                        }
 
+                        function displayBuyData(entry){
+                            price = entry.price;
+                            $("#title").html("<label>" + entry.subname + " - " +entry.actionmsg + "</label>"); 
+                            $("#priceperunit").html(price); 
+                            $("#pricetotal").html(qnty*price);
+                        }
+
+                        function showNext() {
+                            loop_id++;
+                            qnty = 1;  $('.spinner input').val(1);
+                            let for_buyform2 = getBuyJson();
+                            let entries = for_buyform2[1];
+                            if (loop_id >= entries.length) loop_id = 0;
+                            let entry = entries[loop_id];
+                            console.log("loop_id = "+loop_id);
+                            console.log("entry = "+entry);
+                            displayBuyData(entry);
+                        }
                     </script>
                 {{/if}}
             </span>
