--- a/views/partials/bookpartial.hbs
+++ b/views/partials/bookpartial.hbs
@@ -1,6 +1,7 @@
 
 <div>
-    <form action=""  role="form">
+    <form id="userBookingForm"  role="form" method="POST">
+        <input id="bname" type="hidden" name="bname"/>
         <fieldset>
 			<div class="form-group">
                 <label for="dtp_input2" class="col-md-2 control-label">Date</label>
@@ -9,7 +10,7 @@
                     <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
 					<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
                 </div>
-				<input type="hidden" id="dtp_input2" value="" /><br/>
+				<input type="hidden" id="bdate" /><br/>
             <!-- </div>
 			<div class="form-group"> -->
                 <label for="dtp_input3" class="col-md-2 control-label">Start Time</label>
@@ -18,7 +19,7 @@
                     <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
 					<span class="input-group-addon"><span class="glyphicon glyphicon-time"></span></span>
                 </div>
-				<input type="hidden" id="dtp_input3" value="" /><br/>
+				<input type="hidden" id="bstarttime" value="" /><br/>
             <!-- </div>
             <div class="form-group"> -->
                     <label for="dtp_input4" class="col-md-2 control-label">Till</label>
@@ -27,10 +28,10 @@
                         <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
                         <span class="input-group-addon"><span class="glyphicon glyphicon-time"></span></span>
                     </div>
-                    <input type="hidden" id="dtp_input4" value="" />
+                    <input type="hidden" id="bendtime" value="" />
                 </div>
                 <div class="col-md-3">
-                    <button class="col-md-9 button1">Save</button>
+                    <button onclick="formSubmit();" class="col-md-9 button1">Save</button>
                     <br/><br/>
                 </div>
         </fieldset>
