--- a/views/partials/bookpartial.hbs
+++ b/views/partials/bookpartial.hbs
@@ -6,29 +6,29 @@
 			<div class="form-group">
                 <label for="dtp_input2" class="col-md-2 control-label">Date</label>
                 <div class="input-group date form_date col-md-5" data-date="" data-date-format="dd MM yyyy" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
-                    <input class="form-control" size="10" type="text" value="" readonly>
+                    <input id="bdate" class="form-control" size="10" type="text" name="bdate" readonly>
                     <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
 					<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
                 </div>
-				<input type="hidden" id="bdate" /><br/>
+				<input type="hidden" id="date" value="" /><br/>
             <!-- </div>
 			<div class="form-group"> -->
                 <label for="dtp_input3" class="col-md-2 control-label">Start Time</label>
                 <div class="input-group date form_time col-md-5" data-date="" data-date-format="hh:ii" data-link-field="dtp_input3" data-link-format="hh:ii">
-                    <input class="form-control" size="10" type="text" value="" readonly>
+                    <input id="bstarttime" class="form-control" size="10" type="text" name="bstarttime" readonly>
                     <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
 					<span class="input-group-addon"><span class="glyphicon glyphicon-time"></span></span>
                 </div>
-				<input type="hidden" id="bstarttime" value="" /><br/>
+				<input type="hidden" id="starttime" value="" /><br/>
             <!-- </div>
             <div class="form-group"> -->
                     <label for="dtp_input4" class="col-md-2 control-label">Till</label>
                     <div class="input-group date form_time col-md-5" data-date="" data-date-format="hh:ii" data-link-field="dtp_input3" data-link-format="hh:ii">
-                        <input class="form-control" size="10" type="text" value="" readonly>
+                        <input id="bendtime" class="form-control" size="10" type="text" name="bendtime" readonly>
                         <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
                         <span class="input-group-addon"><span class="glyphicon glyphicon-time"></span></span>
                     </div>
-                    <input type="hidden" id="bendtime" value="" />
+                    <input type="hidden" id="endtime" value="" />
                 </div>
                 <div class="col-md-3">
                     <button onclick="formSubmit();" class="col-md-9 button1">Save</button>
