all user views are fully functional (save-able, edit-able), working on room summary

--- a/views/buyform.hbs
+++ b/views/buyform.hbs
@@ -139,7 +139,7 @@
                             
                             var act = "/users/userbuy/save";
 
-                            alert("act = "+act);
+                            //alert("act = "+act);
                             let formsubm = document.getElementById('userBuyForm');
                             formsubm.setAttribute('action',act).submit();
                             formsubm.reset();
