--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,9 +2,10 @@
       <div>
             <span style="font-size:22px; font-family: Chalkduster, Helvetica, sans-serif;"> Welcome to Mango Riviera</span>
             <img style="max-width:50px;" src="/static/images/sun.png" alt="logo"> &nbsp;&nbsp;&nbsp;
-            <a class="lists" href="/{{firstlink}}">&nbsp; {{firstlink}}</a> &nbsp; &nbsp; 
-            <a class="lists" href="/admin/infoforadmin">Admin page</a>&nbsp; &nbsp; 
+            <a class="lists" href="/{{firstlink}}">&nbsp; {{firstlink}}</a> &nbsp; &nbsp; | &nbsp; &nbsp; 
+            <a class="lists" href="/users/guestsummary">Your summary ( room #B218 )</a>&nbsp; &nbsp; | &nbsp; &nbsp; 
+            <a class="lists" href="/admin/infoforadmin">Admin page</a>&nbsp; &nbsp; | &nbsp; &nbsp; 
             <a class="lists" target="_blank" href="https://github.com/aripovula/MangoRivieraNodeJSv.2">
-                  Link to Github repo</a>&nbsp; &nbsp; 
+                  Link to Github repo</a>
             <!-- <a class="lists" href="#" id="myBtn" onclick="myFunction()">Play/Pause</a> -->
       </div>
