--- a/views/home.hbs
+++ b/views/home.hbs
@@ -49,6 +49,126 @@
 
       {{> videopartial}}
 
+
+
+
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <div class="modal-header">
+      <span class="close">&times;</span>
+    </div>
+    <div class="modal-body">
+          <p id="maintext"></p>
+          <form id="loginForm"  role="form" method="POST">
+            <label style="color:black">Room # &nbsp; &nbsp; &nbsp;</label>
+            <input id="btname" size="30" type="text" name="name" placeholder="room number" autofocus="autofocus" /><br/>
+            <label style="color:black">Pin code &nbsp; &nbsp;</label>
+            <input id="btsubname" size="30" type="text" name="subname" placeholder="pin-code" style="margin-top:10px;" /> 
+            <br/>
+
+            <span id="btradio" style="color:black">
+              <br/>
+              <p>Room options below are provided for development and testing purposes:</p>
+              <p>( open a new tab, login under a different room # and see how it works for different rooms )</p>
+              <input id="btrad3" type="radio" name="roomnumb" onclick=""  value="opt1" checked> &nbsp; room # B218<br/>
+              <input id="btrad2" type="radio" name="roomnumb" onclick=""  value="opt2"> &nbsp; room # C410<br/>
+              <input id="btrad1" type="radio" name="roomnumb" onclick="" value="opt3"> &nbsp; room # E315<br/>
+            </span>
+
+            <br/>
+            <button id="Submit" class="button1" onclick="formSubmit()" style="margin-top:10px;">Login</button> &nbsp; &nbsp;
+            <button type="button" class="button2" onclick="modal.style.display = 'none';" style="margin-top:10px;">Cancel</button>
+
+          </form>
+          <br/>
+    </div>
+
+    <div class="modal-footer">
+    </div>
+  </div>
+
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+
+
+// When the user clicks the button, open the modal 
+//( 11, '{{id}}', '{{name}}','sub-name','message',0, 'Edit the header type name:', '')
+function showModal() {
+
+    modal.style.display = "block";
+
+    var fe = getElementVars();
+
+    fe.dname.setAttribute('value',name);
+    fe.dsubname.setAttribute('value',subname);
+    fe.dtext.innerHTML = name;
+
+}
+
+
+function getElementVars(){
+  var fe = new Object();
+    fe.dname = document.getElementById('btname');        
+    fe.dsubname = document.getElementById('btsubname');
+    return fe;
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+    modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+
+function formSubmit() {
+      var fe = getElementVars();
+
+      var subname = fe.dsubname.value;
+      var infotype = $("input:radio[name='displaytype']:checked").val();
+
+      var action = "/admin/info_subtype/"+idn+"/"+parent_id+"/"+infotype+"/update";
+
+      let formLogin = document.getElementById('loginForm');
+      formLogin.setAttribute('action',action).submit();
+      formLogin.reset();
+      return false;
+    };
+
+
+</script>
+
+      <div class="boxedtransp">
+        <label id="labl" style="margin-left:5px;">Admin functions: &nbsp; (change any &amp; see tables change, would require password in real life)</label>
+        <ul>
+        <li><a onclick="showModal()" href="#"> add new header type </a>
+          <span style="display:inline-block; width: 80px;"></span>
+          <a data-toggle="tooltip" data-placement="bottom" title='Upon a click it deletes all changes made by you to Mongoose collections, restores all initial entries to collections as if you never had changed anything. Defaults are auto-restored every night at 4 a.m. EST !' onclick="" href="#">( Undo all changes, restore defaults )</a>
+        </li>
+        
+        </ul>
+      </div>
+
+
+
+
+
+
       <script src="../js/index2.js"></script>
   </body>
 </html>
