implemented requesting of pincode whichever page is requested, lockpage is made secure

--- a/views/adminpage.hbs
+++ b/views/adminpage.hbs
@@ -423,7 +423,7 @@ function formSubmit() {
         {{> footer}}
     </div>
 
-      {{> videopartial}}
+      {{> videopartial logout = "Logout"}}
 
       <script src="/js/index2.js"></script>
 
