--- a/views/bookform.hbs
+++ b/views/bookform.hbs
@@ -57,7 +57,7 @@
 </div>
     
 
-      {{> videopartial}}
+    {{> videopartial logout = "Logout"}}
 
 
 <script src="../../js/index2.js"></script>
