--- a/views/booking.hbs
+++ b/views/booking.hbs
@@ -43,7 +43,7 @@
         {{> footer}}
     </div>
 
-      {{> videopartial}}
+        {{> videopartial logout = "Logout"}}
 
       <script src="/js/index2.js"></script>
   </body>
