--- a/views/home.hbs
+++ b/views/home.hbs
@@ -47,161 +47,7 @@
         {{> footer}}
     </div>
 
-      {{> videopartial}}
-
-
-
-
-
-<!-- The Modal -->
-<div id="myModal" class="modal">
-
-  <!-- Modal content -->
-  <div class="modal-content">
-    <div class="modal-header">
-      <span class="close">&times;</span>
-    </div>
-    <div class="modal-body">
-          <p id="maintext"></p>
-          <form id="loginForm" role="form" method="POST">
-            <label style="color:black">Room # &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</label>
-            <input id="btroom" size="30" type="text" name="room" placeholder="room number" autofocus="autofocus" /><br/>
-            <label style="color:black">Pin code &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</label>
-            <input id="btcode" size="30" type="password" name="code1" placeholder="pin-code" style="margin-top:10px;"/><br/>
-            <label id="btcomment" style="color:black;font-size:14px;">&nbsp; * pin-code is provided in your Welcome package</label>
-            <span id="btconfirmcode">
-              <label style="color:black">Re-type code &nbsp; </label>
-              <input id="btcode2" size="30" type="password" name="code2" placeholder="re-type pin-code" style="margin-top:10px;" /> 
-            </span>
-          <div id="btroomchoice" class="boxedtransp" style="background: #dddddd !important;">
-            <label id="btcomment" style="color:black;font-size:14px;">&nbsp; ** pin-code would be input by user in real life</label>
-            <span id="btradio" style="color:black">  
-              <p>Room options below are provided for development and testing purposes only:</p>
-              <p>( each room is based on a separate session id.</p>
-              <p>Open a different browser, login under a different room # and see how it works for different rooms )</p>
-              <input id="btrad1" type="radio" name="roomnumb" onclick="setRoomValue(1);"  value="opt1" checked> &nbsp; room # B218<br/>
-              <input id="btrad2" type="radio" name="roomnumb" onclick="setRoomValue(2);"  value="opt2"> &nbsp; room # C410<br/>
-              <input id="btrad3" type="radio" name="roomnumb" onclick="setRoomValue(3);" value="opt3"> &nbsp; room # E315<br/>
-              <a onclick="showModal(2)" href="#">add a new room and pin-code and manually dial in above form to login (Admin only)</a>
-            </span>
-          </div>
-            <br/>
-            <button id="Submit" class="button1" onclick="formSubmitRoom()" style="margin-top:10px;">Login</button> &nbsp; &nbsp;
-            <button type="button" class="button2" onclick="modal.style.display = 'none';" style="margin-top:10px;">Cancel</button>
-
-          </form>
-          <br/>
-    </div>
-
-    <div class="modal-footer">
-    </div>
-  </div>
-
-</div>
-
-<script>
-// Get the modal
-var modal = document.getElementById('myModal');
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-
-
-// When the user clicks the button, open the modal 
-//( 11, '{{id}}', '{{name}}','sub-name','message',0, 'Edit the header type name:', '')
-function showModal(type) {
-
-    var fe = getElementVars();
-    if (type == 1) {
-      fe.dconfirmcode.style.display = 'none';
-      fe.dcomment.style.display = 'block';
-      fe.droomchoice.style.display = 'block';
-      fe.dsubmit.innerHTML = "Login";
-      fe.dradio1.checked = true;
-      setRoomValue(1);
-    } else {
-      fe.dconfirmcode.style.display = 'block';
-      fe.dcomment.style.display = 'none';
-      fe.droomchoice.style.display = 'none';
-      fe.dsubmit.innerHTML = "Register";
-      setRoomValue(0);
-
-    }
-    modal.style.display = "block";    
-
-}
-
-
-function getElementVars(){
-  var fe = new Object();
-    fe.droom = document.getElementById('btroom');        
-    fe.dcode = document.getElementById('btcode');
-    fe.dcode2 = document.getElementById('btcode2');
-    fe.dconfirmcode = document.getElementById('btconfirmcode');
-    fe.dcomment = document.getElementById('btcomment');
-    fe.droomchoice = document.getElementById('btroomchoice');
-    fe.dradio1 = document.getElementById('btrad1');
-    fe.dsubmit = document.getElementById('Submit');
-    return fe;
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-    modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modal) {
-        modal.style.display = "none";
-    }
-}
-
-function formSubmitRoom() {
-        alert("type = "+type);
-      var fe = getElementVars();
-
-      var action;
-
-      
-      if (type == 1) action = "/users/login";
-      if (type == 2) action = "/admin/registerroom";
-      console.log('type='+type);
-      console.log('action='+action);
-
-      let formLogin = document.getElementById('loginForm');
-      formLogin.setAttribute('action',action).submit();
-      formLogin.reset();
-      return false;
-    };
-
-function setRoomValue(roomN) {
-  var fe = getElementVars();
-  if (roomN == 0) {fe.droom.setAttribute('value','');fe.dcode.setAttribute('value','');}
-  if (roomN == 1) {fe.droom.setAttribute('value',"B218");fe.dcode.setAttribute('value',1122);}
-  if (roomN == 2) {fe.droom.setAttribute('value',"C410");fe.dcode.setAttribute('value',2233);}
-  if (roomN == 3) {fe.droom.setAttribute('value',"E315");fe.dcode.setAttribute('value',3344);}
-}
-
-</script>
-
-      <div class="boxedtransp">
-        <label id="labl" style="margin-left:5px;">Admin functions: &nbsp; (change any &amp; see tables change, would require password in real life)</label>
-        <ul>
-        <li>
-          <a onclick="showModal(1)" href="#"> login </a>
-          <br/>
-          <a onclick="showModal(2)" href="#"> register </a>
-        </li>
-        
-        </ul>
-      </div>
-
-
-
-
-
+      {{> videopartial logout = "Logout"}}
 
       <script src="../js/index2.js"></script>
   </body>
