--- a/views/partials/videopartial.hbs
+++ b/views/partials/videopartial.hbs
@@ -1,5 +1,6 @@
         <a class="lists" style="position:absolute;top:0;right:10px;font-size:14px" href="#" id="videoBtn" onclick="videoCtrl()">Pause</a>
-        <a class="lists" style="position:absolute;top:30px;right:10px;font-size:14px" href="#" id="audioBtn" onclick="audioCtrl()">Un-mute</a>
+        <a class="lists" style="position:absolute;top:20px;right:10px;font-size:14px" href="#" id="audioBtn" onclick="audioCtrl()">Un-mute</a>
+        <a class="lists" style="position:absolute;top:45px;right:10px;font-size:14px" href="/users/logout" id="audioBtn" onclick="">{{logout}}</a>
 
 
         <video autoplay muted loop id="myVideo">
