--- a/views/infoform.hbs
+++ b/views/infoform.hbs
@@ -84,7 +84,7 @@
 </div>
     
 
-      {{> videopartial}}
+        {{> videopartial logout = "Logout"}}
 
 
 <script src="../../js/index2.js"></script>
