finished work with sessions. Room number is updated based on session id

--- a/views/bookform.hbs
+++ b/views/bookform.hbs
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    {{> header firstlink = "Home"}}
+    {{> header room_n = room_n}}
 <div class="content">
 
       <div id="left">        
