--- a/views/booking.hbs
+++ b/views/booking.hbs
@@ -29,7 +29,7 @@
   
     <div id="content">
 
-        {{> header firstlink = "Home"}}
+        {{> header room_n = room_n}}
       
       <div id="left">        
         <div id="leftpanel"></div>
