--- a/views/buyform.hbs
+++ b/views/buyform.hbs
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    {{> header firstlink = "Home"}}
+    {{> header room_n = room_n}}
 <div class="content">
 
       <div id="left">        
