session based guest-summary and all session based set-ups are done

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -3,7 +3,7 @@
             <span style="font-size:22px; font-family: Chalkduster, Helvetica, sans-serif;"> Welcome to Mango Riviera</span>
             <img style="max-width:50px;" src="/static/images/sun.png" alt="logo"> &nbsp;&nbsp;&nbsp;
             <a class="lists" href="/home">&nbsp; Home</a> &nbsp; &nbsp; | &nbsp; &nbsp; 
-            <a class="lists" href="/users/guestsummary">Your summary ( room #{{room_n}} ){{global.room_code}}</a>&nbsp; &nbsp; | &nbsp; &nbsp; 
+            <a class="lists" href="/users/guestsummary">Your summary ( room #{{room_n}} )</a>&nbsp; &nbsp; | &nbsp; &nbsp; 
             <a class="lists" href="/admin/infoforadmin">Admin page</a>&nbsp; &nbsp; | &nbsp; &nbsp; 
             <a class="lists" target="_blank" href="https://github.com/aripovula/MangoRivieraNodeJSv.2">
                   Link to Github repo</a>
