--- a/views/home.hbs
+++ b/views/home.hbs
@@ -39,7 +39,7 @@
       <div id="right">
         {{!-- <div class="boxedtransp"> --}}
         <div id="rightpanel"></div>
-        {{> sendform}}
+        {{> sendform room_n = room_n}}
         {{!-- </div> --}}
       </div>
   
