--- a/views/homelocked.hbs
+++ b/views/homelocked.hbs
@@ -39,7 +39,7 @@
     <div id="right">
       {{!-- <div class="boxedtransp"> --}}
         <div id="rightpanel"></div>
-        {{> sendform}}
+        {{!-- {{> sendform}} --}}
       {{!-- </div> --}}
     </div>
   
