--- a/views/partials/sendform.hbs
+++ b/views/partials/sendform.hbs
@@ -1,6 +1,7 @@
 <sendform>
         <div class="boxedtransp">
       <form id="message-form">
+        <input id="usid" type="hidden" name="usid" value="{{room_n}}"/>
         <input id="messageinput" style="width: 80%" name="message" type="text" placeholder="message" autofocus autocomplete="off"/>
         <button>Send</button><br/><label style="width:80%;text-align:center">Interest groups:</label>
         <div style="margin:4px;">
