chat now works based on interest groups

--- a/views/partials/sendform.hbs
+++ b/views/partials/sendform.hbs
@@ -5,14 +5,14 @@
         <input id="messageinput" style="width: 80%" name="message" type="text" placeholder="message" autofocus autocomplete="off"/>
         <button>Send</button><br/><label style="width:80%;text-align:center">Interest groups:</label>
         <div style="margin:4px;">
-          <button>Surfing</button>
-          <button>Diving</button>
-          <button>Boat trip</button>
-          <button>Paragliding</button>
-          <button>Water polo</button>
-          <button>Beach valley</button>
-          <button>Sea skiing</button>
-          <button>Yoga</button>
+          <button id="bb1" onclick="setInterestGroup(1);" type="button">General</button>
+          <button id="bb2" onclick="setInterestGroup(2);" type="button">Surfing</button>
+          <button id="bb3" onclick="setInterestGroup(3);" type="button">Diving</button>
+          <button id="bb4" onclick="setInterestGroup(4);" type="button">Boat trip</button>
+          <button id="bb5" onclick="setInterestGroup(5);" type="button">Paragliding</button>
+          <button id="bb6" onclick="setInterestGroup(6);" type="button">Water polo</button>
+          <button id="bb7" onclick="setInterestGroup(7);" type="button">Sea skiing</button>
+          <button id="bb8" onclick="setInterestGroup(8);" type="button">Yoga</button>
       </div>
       </form>
     </sendform>
