chats are auto-updated based on selected interest group reading MomgoDB collection using Socket io

--- a/views/adminpage.hbs
+++ b/views/adminpage.hbs
@@ -413,7 +413,7 @@ function formSubmit() {
 
     <script id="chat-template" type="x-handlebars-template">
         <!-- {{#each this}} -->
-          <p><span style="color:gray">@ {{timePosted}} </span> : <span style="color:green"> {{text}} </span></p>
+          <p><span style="color:gray"> {{timePosted}} </span> : <span style="color:green"> {{text}} </span></p>
         <!-- {{/each}} -->
       </script>
 
