all tables are instantly updated using socket io when changes take place. Info is simulated from server side

--- a/views/bookform.hbs
+++ b/views/bookform.hbs
@@ -70,6 +70,9 @@
 <script>
 
     function formSubmit() {
+        idel = document.getElementById('bid');
+        idel.setAttribute('value','{{selected_booktype._id}}');
+
         nameel = document.getElementById('bname');
         nameel.setAttribute('value','{{selected_booktype.subname}}');
 
