--- a/views/partials/bookpartial.hbs
+++ b/views/partials/bookpartial.hbs
@@ -1,6 +1,7 @@
 
 <div>
     <form id="userBookingForm"  role="form" method="POST">
+        <input id="bid" type="hidden" name="bid"/>
         <input id="bname" type="hidden" name="bname"/>
         <fieldset>
 			<div class="form-group">
