--- a/views/partials/buypartial.hbs
+++ b/views/partials/buypartial.hbs
@@ -1,5 +1,6 @@
 <div>
     <form id="userBuyForm"  role="form" method="POST">
+        <input id="bid" type="hidden" name="bid"/>
         <input id="bname" type="hidden" name="bname"/>
         <input id="bprice" type="hidden" name="bprice"/>
         <input id="bqnty" type="hidden" name="bqnty"/>
