--- a/views/buyform.hbs
+++ b/views/buyform.hbs
@@ -1,193 +1,88 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="../../static/css/custom.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="../../static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
+    <head>
+        <title></title>
+        <link rel="stylesheet" type="text/css" href="../../static/css/custom.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link href="../../static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
 
-    <script type='text/javascript' src="../../socket.io/socket.io.js"></script>
-    <script type='text/javascript' src='../../js/libs/hbs.js'></script>
-    <script type='text/javascript' src="../../js/libs/moment-with-locales.js"></script>
-    <script type="text/javascript" src="../../js/libs/jquery-3.3.1.min.js" charset="UTF-8"></script>
+        <script type='text/javascript' src="../../socket.io/socket.io.js"></script>
+        <script type='text/javascript' src='../../js/libs/hbs.js'></script>
+        <script type='text/javascript' src="../../js/libs/moment-with-locales.js"></script>
+        <script type="text/javascript" src="../../js/libs/jquery-3.3.1.min.js" charset="UTF-8"></script>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="../../static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
-    <script type="text/javascript" src="../../js/libs/jquery-3.3.1.min.js" charset="UTF-8"></script>
-    {{!-- <script type="text/javascript" src="../../js/libs/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../../js/libs/bootstrap-datetimepicker.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="../../js/datepickerCustom.js" charset="UTF-8"></script> --}}
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link href="../../static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
+        <script type="text/javascript" src="../../js/libs/jquery-3.3.1.min.js" charset="UTF-8"></script>
+        {{!-- <script type="text/javascript" src="../../js/libs/bootstrap.min.js"></script>
+        <script type="text/javascript" src="../../js/libs/bootstrap-datetimepicker.js" charset="UTF-8"></script>
+        <script type="text/javascript" src="../../js/datepickerCustom.js" charset="UTF-8"></script> --}}
 
-    <!-- fonts -->
-    <link href='https://fonts.googleapis.com/css?family=Assistant' rel='stylesheet'/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <!-- fonts -->
+        <link href='https://fonts.googleapis.com/css?family=Assistant' rel='stylesheet'/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    </head>
 
-</head>
+    <body>
+      {{> header room_n = room_n}}
+      <div class="content">
 
-<body>
-    {{> header room_n = room_n}}
-<div class="content">
+        <div id="left">
 
-      <div id="left">        
+            {{!-- for_tables should contain array of data. If it is null error will take place. --}}
+            {{!-- therefore checking if it is null before using it --}}
 
-        {{!-- for_tables should contain array of data. If it is null error will take place. --}}
-        {{!-- therefore checking if it is null before using it --}}
-
-        {{#if for_tables }}
-            {{!-- THIS part send complex array of data and uses JS function to render subnmame --}}
-            {{> leftpanel}}
-        {{/if}}
-      </div>
-          
-    <div id="right">
-        <div class="boxedtransp">
-            <legend>&nbsp; &nbsp;Sale:</legend>
-            <span style="margin-left:15px">
-                {{> buypartial}}
-                {{!-- THIS part sends complex array of data and uses JS function to render subnmame --}}
-                {{#if for_buyform }}
-                    {{!-- {{showSubname for_tables}} --}}
-                    <script>
-                        let for_buyform2 = getBuyJson();
-                        
-                        /*console.log("Price parsed = "+for_buyform2);
-                        let a1 = for_buyform2[1];
-                        console.log("Price2 = "+a2);
-                        let a2 = a1[0];
-                        console.log("Price2 = "+a2);*/
-                        var sel_id = for_buyform2[0].sel_id;
-                        var sid;
-                        var subname;
-                        var loop_id;
-                        var qnty=1;
-                        var price;
-
-                        console.log("sel_id = " + sel_id);
-                        console.log("sel_id0 = " + for_buyform2[0]);
-                        console.log("sel_id1 = " + for_buyform2[1]);
-
-                        let html = "";
-                        let subtype = 0; 
-                        for_buyform2[1].forEach(function(entry) {
-                            //html += "<p>Next sub-type:</p>"
-                            subtype++;
-                            console.log("entry len "+entry.length);
-                            console.log("entry 0 "+entry[0]);
-                            console.log("entry null "+entry != null);
-                            //if (entry[0] != null) {
-                                //entry.forEach(function(entry2) {
-                                    console.log("");
-                                    console.log("");
-                                    console.log("entry._id="+entry._id+"'");
-                                    //console.log("items[2]="+sel_id+"'");
-                                    if (entry._id == sel_id) {
-                                        
-                                        loop_id = subtype-1;
-
-                                        console.log("WE DID THIIIIIIIS loop_id = "+loop_id);
-                                        /*html += "<label>" + escape(entry.subname) + " - " + escape(entry.actionmsg) + "</label><br/><br/>";
-                                        if (entry.price != null) html += '<label for="dtp_input2" class="col-md-2 control-label">Price:</label>'
-                                        if (entry.price != null) html += '<div class="input-group spinner col-md-10"><p>'+escape(entry.price)+'$ per unit</p></div>';
-                                        console.log("html = "+html);*/
-
-                                        displayBuyData(entry);
-                                        return;
-                                    }
-                                //});
-                            //}
-                        });
-
-                        function getBuyJson(){
-                            let for_buyform = '{{for_buyform}}';
-                            for_buyform = for_buyform.replace(/(\r\n\t|\n|\r\t)/gm,"");
-                            for_buyform = for_buyform.replace(/&quot;/g, '"');
-                            console.log("Price1 = "+for_buyform);
-                            return JSON.parse(for_buyform);
-                        }
-
-                        function displayBuyData(entry){
-                            sid = entry._id;
-                            price = entry.price;
-                            subname = entry.subname;
-                            $("#title").html("<label>" + subname + " - " +entry.actionmsg + "</label>"); 
-                            $("#priceperunit").html(price); 
-                            $("#pricetotal").html(qnty*price);
-                        }
-
-                        function showNext() {
-                            loop_id++;
-                            qnty = 1;  $('.spinner input').val(1);
-                            let for_buyform2 = getBuyJson();
-                            let entries = for_buyform2[1];
-                            if (loop_id >= entries.length) loop_id = 0;
-                            let entry = entries[loop_id];
-                            console.log("loop_id = "+loop_id);
-                            console.log("entry = "+entry);
-                            displayBuyData(entry);
-                        }
-
-                        function formSubmit() {
-
-                            idel = document.getElementById('bid');
-                            idel.setAttribute('value', sid);
-
-                            nameel = document.getElementById('bname');
-                            nameel.setAttribute('value', subname);
-
-                            priceel = document.getElementById('bprice');
-                            priceel.setAttribute('value', price);
-
-                            qntyel = document.getElementById('bqnty');
-                            qntyel.setAttribute('value', qnty[0]);
-
-                            console.log("namefromCont="+nameel.value);
-                            
-                            var act = "/users/userbuy/save";
-
-                            //alert("act = "+act);
-                            let formsubm = document.getElementById('userBuyForm');
-                            formsubm.setAttribute('action',act).submit();
-                            formsubm.reset();
-                            //resetForm($('#universalForm'));
-                            return false;
-                        };
-                    </script>
-                {{/if}}
-            </span>
-            <br/>
+            {{#if for_tables }}
+                {{!-- THIS part send complex array of data and uses JS function to render subnmame --}}
+                {{> leftpanel}}
+            {{/if}}
         </div>
-    </div>
-</div>
+          
+        <div id="right">
+            <div class="boxedtransp">
+                <legend>&nbsp; &nbsp;Sale:</legend>
+                <span style="margin-left:15px">
+                    {{> buypartial}}
+                    {{!-- THIS part sends complex array of data and uses JS function to render subnmame --}}
+                    {{#if for_buyform }}
+                        {{!-- {{showSubname for_tables}} --}}
+                        <script src="../../js/processBuy.js"></script>
+                    {{/if}}
+                </span>
+                <br/>
+            </div>
+        </div>
+      </div>
     
 
-        {{> videopartial logout = "Logout"}}
+      {{> videopartial logout = "Logout"}}
 
 
-<script src="../../js/index2.js"></script>
-{{!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link href="static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen"> --}}
-{{!-- <script type="text/javascript" src="../../js/libs/jquery-3.3.1.min.js" charset="UTF-8"></script> --}}
-<script type="text/javascript" src="../../js/libs/bootstrap.min.js"></script>
-<script type="text/javascript" src="../../js/libs/bootstrap-datetimepicker.js" charset="UTF-8"></script>
-<script type="text/javascript" src="../../js/datepickerCustom.js" charset="UTF-8"></script>
-<script>
-    function plusAndUpdateTotal(){
-        console.log("ABC = 123 sel_id="+sel_id);
-        qnty++;
-        $("#pricetotal").html(qnty*price); 
-    }
+    <script src="../../js/index2.js"></script>
+    {{!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen"> --}}
+    {{!-- <script type="text/javascript" src="../../js/libs/jquery-3.3.1.min.js" charset="UTF-8"></script> --}}
+    <script type="text/javascript" src="../../js/libs/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../../js/libs/bootstrap-datetimepicker.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="../../js/datepickerCustom.js" charset="UTF-8"></script>
+    <script>
+        function plusAndUpdateTotal(){
+            console.log("ABC = 123 sel_id="+sel_id);
+            qnty++;
+            $("#pricetotal").html(qnty*price); 
+        }
 
-    function minusAndUpdateTotal(){
-        qnty--;
-        if (qnty<0) {$('.spinner input').val(0);qnty=0;}
-        console.log("ABC = 123 sel_id="+sel_id);
-        $("#pricetotal").html(qnty*price); 
-    }
+        function minusAndUpdateTotal(){
+            qnty--;
+            if (qnty<0) {$('.spinner input').val(0);qnty=0;}
+            console.log("ABC = 123 sel_id="+sel_id);
+            $("#pricetotal").html(qnty*price); 
+        }
 
-</script>
-       
-</body>
+    </script>
+        
+  </body>
 
-{{> footer}}
+  {{> footer}}
 </html>
